fix z-index sidepanel

--- a/components/ui/SidePanel/index.module.scss
+++ b/components/ui/SidePanel/index.module.scss
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0px;
   bottom: 0px;
-  z-index: 2;
+  z-index: $zIndexSidePanel;
   right: 0;
   height: 100%;
   width: 512px;
